--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "devDependencies": {
     "@types/jest": "^29.5.12",
     "jest": "^29.7.0"
+  },
+  "dependencies": {
+    "cheerio": "^1.0.0"
   }
 }
